Prevents invisible text by changing font-display

--- a/src/components/IntroCard/IntroCard.module.scss
+++ b/src/components/IntroCard/IntroCard.module.scss
@@ -5,6 +5,7 @@
 
 @font-face {
     font-family: 'rubikmedium';
+    font-display: swap;
     src: url('../../fonts/rubik-medium.woff2') format('woff2'),
      	 url('../../fonts/rubik-medium.woff') format('woff');
 }
